<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item
        android:id="@+id/action_clear_completed"
        android:title="@string/clear_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences" />
</menu>
